# mmeson

./: .editorconfig  .flake8  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: build_test.yml  lint.yml  pages.yml
docs/: Makefile  screenshot.png.license
docs/source/: conf.py  index.rst
mmeson/: __init__.py  __main__.py  cli.py  meson_interface.py  options.py  tui.py
screenshots/: screenshot.png.license
src/mmeson/: __init__.py  __main__.py  cli.py  meson_interface.py  options.py  singleton.py  tui.py
tests/: conftest.py  test_dummy.py
